--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
-body {background-color:tan;}
-h1{color:green;}
+body {background-color:black;font-family:arial;color:white}
+h1{color:grey;font-family:verdana}
+.maindiv{
+    color:black;
+    background-color: white;
+    width:300px;
+    padding:20px;
+    border-radius:25px;
+    align:center
+    
+  
+}
+
+
 
 
